--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,20 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  
+}
+
+body{
+    position: relative;
+}
+
+header{
+box-shadow:  2px 5px 7px -5px #000;  
+position: sticky; 
+top: 0;
+left: 0;
+right: 0;
+background-color: #fff;
 }
 
 nav {
@@ -39,10 +53,12 @@ a {
 }
 
 .heading {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 3rem;
+  text-align: center;
+  margin-top: 30px;
 }
 
 h1 {
@@ -57,7 +73,9 @@ h2 {
     display: flex;
     align-items: center;
     justify-content: center;
+    text-align: center;
     font-size: 1.5rem;
+    margin-bottom: 30px;
 }
 
 .btn{
